# llm-rag-manipulation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Classifier/: classification.py
Classifier/Bert/: bert.py  train.ipynb
Classifier/XGBoost/: train.ipynb
Experiment/: baseline.json  experiment.ipynb  experiment_results_combined.csv
Playground/: main.py
RAG/: RAG.py  encode.py  generation.py  index.py  test.py
